[package]
name = "passkeys"
version = "0.1.0"
edition = "2024"

description = "Experimental library for using MPC with passkeys"
repository = "https://github.com/louib/passkeys"
homepage = "https://github.com/louib/passkeys"
license = "MIT"

readme = "README.md"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net"], optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
log = { version = "0.4", default-features = false }
async-trait = { version = "0.1", default-features = false }
env_logger = "0.10"

[features]
default = []
linux-uhid = ["dep:tokio"]
